--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,11 @@
+/*
+ubicar la etapa arriba y al centro del reloj
+
+ubicar en el centro la configuración de las duraciones de cada etapa
+
+darle un mejor formato a los títulos de cada configuración
+*/
+
 body {
 	background-color: pink;
 }
@@ -53,4 +61,12 @@ header {
 	text-align: center;
 	font-size: 24pt;
 	border-radius: 10px;
+}
+
+#etapa {
+	position: relative;
+	top:15%;
+	left: 35%;
+	width: 40%;
+	font-size: 18pt;
 }
