--- a/css/style.css
+++ b/css/style.css
@@ -1,32 +1,3 @@
-/*
-darle un mejor formato a los títulos de cada configuración
-usar una tipografía linda
-*/
-
-/*
-  una forma de centrar un div que no sabés de antemano el tamaño de la caja que querés centrar:
- 
- al container le das position: relative;
- y a la caja que está adentro y querés centrar
- 
- .box {
-       position: absolute;
-       left: 50%;
-       top: 50%;
-       transform: translateX(-50%);
-       transform: translateY(-50%);
-  }
- 
- 
- otra es poner en el contenedor text-align: center
- y en la caja display: inline-block
- 
- 
- otra es con margin auto directamente en la caja ponés margin: auto;
- 
- */
-
-
 body {
 	background-color: pink;
 }
@@ -35,43 +6,64 @@ header {
 	text-align: center;
 }
 
+div {margin: o; padding: 0;}
+
 .contenedor {
 	margin: auto;
 	position: relative;
 	display: block;
 	width: 600px;
 	height: 420px;
+	text-align: center;
 }
 
 .configuracion {
-	position: relative;
-	text-align: center;
+        display: inline-block;
+	margin: auto;
 }
 .descanso {
 	background-color: green;
-	margin-left : auto;
+	float:left;
+	border-radius: 10px;
+	-moz-border-radius: 10px;
+	-webkit-border-radius: 10px;
+	text-align: center;
+        width: 200px;
 }
 
 .pomodoro {
 	background-color: red;
-	margin-right: auto;
+	float: right;
+	border-radius: 10px;
+	-moz-border-radius: 10px;
+	-webkit-border-radius: 10px;
+	text-align: center;	
+	width: 200px;
 }
 
-.descanso, .pomodoro, .menos, .mas, #duracionDescanso, .duramenos {
+.menos, .mas, .duracion {
 	display: inline-block;
-	font-size: 24pt;	
+	font-size: 18pt;
+	text-align: center;
 }
 
-.reloj {
-    position: absolute;
+.duracion {
+  width: 30px;
+}
+
+#reloj {
+        position: absolute;
 	top: 40%;
 	left: 30%;
 	width:40%;
 	height: 50%;
 	background-color: red;
 	border-radius: 50%;
+	-moz-border-radius: 50%;
+	-webkit-border-radius: 50%;
 	box-shadow: 2px 2px 5px 2px black; /* horizontal vertical blur spread color */
-	text-align: center;
+        -moz-box-shadow: 2px 2px 5px 2px black;
+        -webkit-box-shadow: 2px 2px 5px 2px black;
 }
 
 .conteo {
@@ -84,13 +76,14 @@ header {
 	text-align: center;
 	font-size: 24pt;
 	border-radius: 10px;
+	-moz-border-radius: 10px;
+	-webkit-border-radius: 10px;
 }
 
 #etapa {
 	position: relative;
-	top:10%;/*
-	left: 35%;
-	width: 40%;*/
+	top:15%;
+	left: 30%;
+	width: 40%;
 	font-size: 18pt;
-	/*display: inline-block;*/
 }
